--- a/index.html
+++ b/index.html
@@ -5,81 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista</title>
     <script type="text/javascript" src="main.js" defer></script>
+    <link type="text/css" rel="stylesheet" href="main.css">
 </head>
-<style>
-        * {
-            box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-color: #f4f4f4;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        input[type="text"] {
-            padding: 10px;
-            margin: 10px 0;
-            width: 300px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        input[type="button"] {
-            padding: 10px;
-            background-color: #4caf50;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        input[type="button"]:hover {
-            background-color: #45a049;
-        }
-
-        h3 {
-            margin-top: 20px;
-            color: #333;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        li {
-            background-color: #fff;
-            margin: 5px 0;
-            padding: 10px;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        li span {
-            margin-right: 10px;
-        }
-
-        #finalizadasT {
-            margin-top: 40px;
-        }
-
-        #finalizadas {
-            margin-top: 10px;
-        }
-    </style>
-
 <body>
+
     <h1>Lista de tarefas</h1>
     <input type="text" name="descricao" id="descricao" placeholder="Descricao aqui">
     <input type="button" value="Adicionar" onclick="NewTarefa()" id="adicionar">
