--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>Lista de tarefas</h1>
-    <input type="text" name="descricao" id="descricao" placeholder="Descricao aqui">
+    <input type="text" name="descricao" id="descricao" placeholder="Descricao aqui" maxlength="100">
     <input type="button" value="Adicionar" onclick="NewTarefa()" id="adicionar">
     <h3 id="tarefasT">Tarefas Pendentes (0)</h3>
     <ul id="tarefas"></ul>
